# demand-planner

./: .env.example  CLAUDE.md  Dockerfile  README.md  api.py  dashboard.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: settings.yaml
sample_data/: demand_data.csv  generate.py
src/: __init__.py
src/agents/: __init__.py  demand_agent.py  report_agent.py
src/chains/: __init__.py  forecast_chain.py
src/data/: __init__.py  preprocessor.py  validators.py
src/models/: __init__.py  arima_model.py  exponential_smoothing.py  prophet_model.py
src/tools/: __init__.py  anomaly_detector.py  data_loader.py  forecasting.py  report_generator.py
src/utils/: __init__.py  config.py  logger.py
tests/: test_core.py
