[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-planner"
version = "0.1.0"
description = "AI-powered supply chain demand planning and forecasting"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
demand-planner = "main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
